--- a/Covid_19_data_analysis_Alpha.ipynb
+++ b/Covid_19_data_analysis_Alpha.ipynb
@@ -28311,9 +28311,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -28329,5 +28329,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
